Fix layout shifting
that occurs when the winner's text appears.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  animation: gradient 200s ease infinite;
-  font-family: cursive;
+  /* animation: gradient 200s ease infinite; */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #eaeaea;
   background-size: 20px 20px;
   background-image:
@@ -61,7 +61,7 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.row > button {
+.cell {
   flex: 1;
   font-size: clamp(2rem, 12vw, 4rem);
   cursor: pointer;
@@ -69,6 +69,10 @@ h1 {
   border: none;
   font-weight: 100;
   background-color: transparent;
+}
+
+.cell:hover {
+  background-color: hsla(17, 74%, 54%, 0.5);
 }
 
 .row:not(:last-child) {
@@ -94,10 +98,19 @@ h1 {
   gap: 1rem;
 }
 
+.winner-container {
+  min-height: 3.5rem;
+  margin-top: .3rem;
+  display: grid;
+  /* border: 1px solid red; */
+  place-items: center;
+}
+
 .winner {
   font-size: clamp(1.2rem, 8vw, 2rem);
   text-align: center;
   color: hsl(17, 74%, 54%);
+  /* border: 1px solid red; */
 }
 
 .restart-btn {
